2002-12-20  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/shm.h: Define SHM_HUGETLB.
	* sysdeps/unix/sysv/linux/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/shm.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/shm.h: Likewise.
	Patch by William Lee Irwin <wli@holomorphy.com>.

2002-12-20  Andreas Schwab  <schwab@suse.de>

	* locale/programs/ld-measurement.c (measurement_output): Fix
	index calculation.

2002-12-20  Ulrich Drepper  <drepper@redhat.com>

	* include/libio.h [_IO_MTSAFE_IO && _IO_lock_inexpensive]:
	Redefine _IO_flockifle and _IO_funlockfile as inlines.

	* sysdeps/generic/dl-sysdep.c (_dl_important_hwcaps): For TLS
	builds add "tls" in the search path.
	* elf/ldconfig.c (is_hwcap_platform): Also recognize "tls".
	(path_hwcap): Recognize "tls".

2002-12-19  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/system.c (cancel_handler): Use
	__waitpid instead of waitpid.

	* sysdeps/unix/sysv/linux/i386/_exit.S: Use ENTER_KERNEL instead of
	int $0x80.
	* sysdeps/unix/sysv/linux/i386/getcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/swapcontext.S: Likewise.

	* sysdeps/unix/sysv/linux/i386/sysdep.h: Add support to use AT_SYSINFO
	information for system calls.

	* sysdeps/generic/dl-sysdep.h: Define RTLD_PRIVATE_ERRNO to 1 only
	for ld.so.

	* elf/rtld.c (_dl_start) [USE___THREAD]: Define initdtv.

2002-12-19  Roland McGrath  <roland@redhat.com>

	* iconvdata/ibm856.h: Convert GCC extension initializer syntax to C99.
	* iconvdata/ibm922.h: Likewise.
	* iconvdata/ibm930.h: Likewise.
	* iconvdata/ibm932.h: Likewise.
	* iconvdata/ibm933.h: Likewise.